# bevy_walker

./: Cargo.toml
.cargo/: config.toml
src/: components.rs  main.rs  main_old.rs  setup.rs
src/components/: bonus.rs  mod.rs
src/systems/: bonus_cuboids.rs  camera.rs  dog.rs  entities.rs  ground.rs  light.rs  mod.rs  player.rs  player_camera.rs
