[package]
name = "bevy_walker"
version = "0.1.0"
edition = "2021"


[lints.clippy]
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
needless_pass_by_value = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }


[profile.dev]
opt-level = 1 # suggested: 1

[profile.dev.package."*"]
opt-level = 3 # suggested: 3


[profile.release]
lto = true    # link time optimizations
opt-level = 3 # suggested: "s" # stands for binary size


# [dependencies]
# avian3d = "0.1"
# bevy_rapier3d = "0.27.0"
# bevy_editor_pls = "0.10"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_winit",
    "bevy_pbr",
    "bevy_core_pipeline",
    "tonemapping_luts",
    "dynamic_linking",
    "multi_threaded",
]
